# master-project-repo

./: untitled.txt
broker-queue/: CMakeLists.txt  README.md  broker_daxpy_small.csv  broker_test_output.csv  broker_test_output_large.csv  bwd_basic_test.csv  bwd_deq_25.csv  daxpy_log.txt  gottlieb_basic_test.csv  gottlieb_deq_25.csv  queuetest  queuetest1  queuetest_daxpy  queuetest_n_scaling  queuetest_simple
broker-queue/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  broker_daxpy_small-checkpoint.csv  broker_test_output-checkpoint.csv  broker_test_output_large-checkpoint.csv  daxpy_log-checkpoint.txt
broker-queue/include/: broker_profile.nsys-rep  datatypes.h  daxpyN.cuh  helper.h  kernels.cuh  mybroker  queuetest.cuh  try1.cu
broker-queue/include/.ipynb_checkpoints/: datatypes-checkpoint.h  helper-checkpoint.cuh  kernels-checkpoint.cuh
broker-queue/include/queues/: broker.cuh  globals.cu  gpu_program_test  gpu_program_test1  gpu_program_test2  gpu_program_test2#  gpu_program_test3  gpu_program_test4  job_definitions.cuh  job_kernels.cuh  job_structs.cuh  main.cu  taskmanager_gpu.cu  taskmanager_gpu.cuh  test
broker-queue/include/queues/.ipynb_checkpoints/: broker-checkpoint.cuh  bwd-checkpoint.cuh  gottlieb-checkpoint.cuh  job_kernels-checkpoint.cuh  taskmanager_gpu-checkpoint.cu  taskmanager_gpu-checkpoint.cuh
broker-queue/source/: main.cpp  main_simple.cpp  main_taskmanager.cu  queuetest.cu
broker-queue/source/.ipynb_checkpoints/: main_taskmanager-checkpoint.cu
capture/: cuda_events_min  cuda_events_min.cu  graph_overhead_timer  graph_overhead_timer1  graph_wave_params  graph_wave_params.cu  graphs_demo  graphs_min_bench  graphs_min_bench.cu  gtoh_overhead.nsys-rep  gtoh_overhead.sqlite  k123.nsys-rep  report1.nsys-rep  report1.sqlite  report_graph.nsys-rep  report_graph.sqlite  test_cuda_profiler.cu  timer.hpp  triple_launch_1M_one  triple_launch_1M_one.cu
capture/.ipynb_checkpoints/: graph_overhead_timer-checkpoint.cu  graph_wave_params-checkpoint.cu
cg/: cg_graph.nsys-rep  csmca.py  cuda_errchk.hpp  graph_cg  graph_profile.nsys-rep  pip-cg3.cu  plot_7_1.ipynb  poisson2d.hpp
cg/.ipynb_checkpoints/: classical-cg-checkpoint.cu  (+1 more)
concurrentqueue/: myAtomic.hpp  test.cu
myngs_cuda/: CMakeCache.txt  Makefile  cmake_install.cmake  ngs_nvcc  ngs_nvlink
myngscuda_notebooks/: myngs_cuda-Copy1.ipynb  wave_cuda.ipynb  wave_cuda_original.ipynb
(+5 files in other folders)
